@@ -7,6 +7,8 @@
   allow.multi.sfv=false
 * Fixed TrialSiteBot to recieve decrypted message when using blowfish
 * Removed !failed 
+* Added User ban support (site ban, site unban, site bans)
+
 
 2005/02/13 Matt Zimmerman <zubov@users.sourceforge.net>
 * Updated perms.conf.dist to reflect login_prompt and secure(SSL/TLS)
